# multiplayer-server

./: .air.toml  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  sqlc.yml
.github/workflows/: db-migration-push.yml  general.yml  http-server-push.yml  websocket-server-push.yml
cmd/multiplayer-server/: main.go
configuration/: base.yml  local.yml
db/: Dockerfile  migration.go
db/migrations/: 20240306145347_create_users.up.sql  20240406144855_create_documents.up.sql  20240410151644_create_document_updates.down.sql  20240410151644_create_document_updates.up.sql  20240518064441_create_document_contributors.down.sql  20240518064441_create_document_contributors.up.sql
db/queries/: add_document_contributor.sql  create_document.sql  create_user.sql  delete_document.sql  document.sql  document_update.sql  get_document_by_id.sql  get_documents_by_owner_id.sql  get_documents_by_user_id.sql  user.sql
internal/application/: application.go  azure.go  blob.go  db.go
internal/configuration/: configuration.go
internal/db/: add_document_contributor.sql.go  create_document.sql.go  create_document_update.sql.go  create_user.sql.go  delete_document.sql.go  document.sql.go  document_update.sql.go  get_document_by_id.sql.go  get_documents_by_owner_id.sql.go  get_documents_by_user_id.sql.go  get_user_by_email.sql.go  models.go  user.sql.go
pkg/decoder/: cursor.go  (+1 more)
resources/: az-dev-cert.pem  az-dev-key.pem
scripts/: generate-azurite-certificate.sh  generate-elasticsearch-api-key.sh  init_db.sh  startup.sh
websocket/: .dockerignore  .env  Cargo.toml  Dockerfile
websocket/.sqlx/: query-0be53f873d2343d8ec14d9b61106d3a818f04210ee77f80a230eb59da3e1131d.json  query-1f79824aa161858b4f28e5618908a26db6cf4e23ad1cc974e22fb853b4a389cf.json  query-23cc258293fcdcb61e91da70e81456281dd8a8cbf42321f6e05bdf5922d6077c.json  query-2f92ce393e3ac5846987054e7bbcfddc6296fac0c5bc7fa269e00ce8b25fef9b.json  query-67d5ba48584eca7430ec405ce7aeb5a29ad459d46909a313cfb77b9d64ee0b35.json  query-74d5e9a2355beea139cedf925c39ca89c4a6cf3252cce026634255233eb7fee6.json  query-8031d666ea337c18afc587f8afc4467d79d5d252d2ab4c33e3aa5d86cfae8eab.json  query-9556891f2f33308f7ef21748afea01dd0dbd3241f465b3ddf9be304510dcd94b.json  query-fc3a036da13daa39727a7ca413f6e8c6d5ab9bd7670b5e51eafaa4f1fdd1c381.json
websocket/configuration/: base.yml  local.yml  production.yml
websocket/scripts/: init_db.sh
websocket/src/: auth.rs  client.rs  configuration.rs  document.rs  error.rs  lib.rs  main.rs  server.rs  startup.rs  telemetry.rs  websocket.rs
websocket/src/websocket/: client.rs  room.rs  syncer.rs
websocket/tests/: helpers.rs
websocket/tests/api/: awareness.rs  helpers.rs  main.rs  ping_pong.rs  sync.rs  upgrade.rs
websocket/tests/websocket/: helpers.rs  main.rs  ping_pong.rs  sync.rs
(+36 files in other folders)
